# ascii-neural-net

./: .gitignore  CMakeLists.txt  EntrancesAndExits.txt  README.md  _confusion-matrix.txt  confusion-matrix-final.txt  convert-images.py  create-dataset.py  testDataset.txt
ascii-neural-net/: CMakeLists.txt  activation-functions.hpp  dataset.cpp  dataset.hpp  layers.cpp  layers.hpp  main.cpp  metrics.cpp  metrics.hpp  model.cpp  model.hpp  status.hpp  t.cpp  t.hpp  types.hpp
checkpoints/: model-a.checkpoint  model-a.checkpoint.050  model-a.checkpoint.100  model-a.checkpoint.1000  model-a.checkpoint.10000  model-a.checkpoint.1050  model-a.checkpoint.1100  model-a.checkpoint.1150  model-a.checkpoint.1200  model-a.checkpoint.1250  model-a.checkpoint.1300  model-a.checkpoint.1350  model-a.checkpoint.1400  model-a.checkpoint.1450  model-a.checkpoint.150  model-a.checkpoint.1500  model-a.checkpoint.1550  model-a.checkpoint.1600  model-a.checkpoint.1650  model-a.checkpoint.1700  model-a.checkpoint.1750  model-a.checkpoint.1800  model-a.checkpoint.1850  model-a.checkpoint.1900  model-a.checkpoint.1950  model-a.checkpoint.200  model-a.checkpoint.2000  model-a.checkpoint.2050  model-a.checkpoint.2100  model-a.checkpoint.2150  model-a.checkpoint.2200  model-a.checkpoint.2250  model-a.checkpoint.2300  model-a.checkpoint.2350  model-a.checkpoint.2400  model-a.checkpoint.2450  model-a.checkpoint.250  model-a.checkpoint.2500  model-a.checkpoint.2550  model-a.checkpoint.2600  (+200 more)
models/: model-a.ann  model-b.ann  model-c.ann  model-d.ann
